@@ -37,25 +37,16 @@ Usage:
       </tal:tab>
     </div>
   </tal:forward>
-  
-   <tal:auto define="tabs python:auto_relations.all()" tal:condition="tabs">
+
+  <tal:auto define="tabs python:auto_relations.tabs">
     <!-- Auto relations -->
     <div class="visualNoMarker">
       <tal:tab repeat="tab tabs">
-        <tal:def define="label python:tab[0]; related python:tab[1]"
-          tal:condition="related">
+        <tal:def define="label python:tab[0]; related python:tab[1]">
           <h3 tal:content="label">Relation label</h3>
           <div metal:use-macro="here/eea_relateditems/macros/relatedItems" />
         </tal:def>
       </tal:tab>
-    </div>
-  </tal:auto>
-
-  <tal:auto tal:define="related python:[brain for brain in auto_relations.brains]"
-    tal:condition="related">
-    <h2 i18n:translate="">Auto discovered relations</h2>
-    <div class="visualNoMarker">
-      <div metal:use-macro="here/eea_relateditems/macros/relatedItems" />
     </div>
   </tal:auto>
 </div>
