@@ -8,6 +8,8 @@ Changelog
 
 0.2 (unreleased)
 ----------------
+* Changed AutoRelations API to return a list of tabs (labeled brains) [#3298 voineali]
+
 
 0.1 (2010-06-07)
 ----------------
